--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,9 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 /* my content */
+* {
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .complete {
   width: 1.2em;
   height: 1.2em;
@@ -51,6 +54,7 @@ p, h1, h2, h3, h4, h5, h6 {
 textarea {
   border-style: none;
   background-color: beige;
+  resize: vertical;
 }
 textarea:focus {
   outline-style: none;
@@ -58,7 +62,7 @@ textarea:focus {
 }
 .project-table{
   margin: 20px;
-  background: white;
+  background: slategray;
 }
 .item-title{
   background-color: beige;
@@ -76,6 +80,7 @@ textarea:focus {
   margin: 10px;
   display: grid;
   grid-template-columns:auto 1fr auto;
+  border-radius: 5px;
 }
 .open {
   grid-column: 1/4;
@@ -88,6 +93,10 @@ textarea:focus {
   background-color: lightcyan;
   padding: 10px;
   border-radius: 20px;
+  width: 100%;
+  border-style: ridge;
+  border-color:lightseagreen;
+  border-width: 2px;
 }
 .active > .project-caption {
   background-color: aqua;
@@ -115,7 +124,7 @@ textarea:focus {
   color:black;
 }
 .open p:first-child {
-  color: gray;
+  color:darkslategray;
   margin-bottom: 10px;
 }
 form {
@@ -132,9 +141,11 @@ form {
 label {
   padding: 5px;
 }
-#create-project {
+#create-project,
+#create-task {
   margin: 10px;
   margin-bottom: 0;
+  border-radius: 2px;
 }
 
 #wrap {
@@ -146,6 +157,28 @@ label {
   padding: 10px;
   gap: 5px;
 }
+#sidebar :nth-child(2){
+  margin-bottom: 15px;
+}
+#sidebar > button {
+  border: 2px outset grey;
+}
+#sidebar > button:active {
+  border: inset;
+}
 #content {
   flex: 1;
+  position: absolute;
+  left: 247px;
+  background-color: slategrey;
+  width: calc(100vw - 247px);
+  min-height: 100vh;
+}
+
+#side-panel {
+  background-color: deepskyblue;
+  box-shadow: 3px 0 3px black;
+  height: 100vh;
+  position: fixed;
+  z-index: 1;
 }
